- Change: Camera zoom input control modifier "PLScene::SNMCameraZoom" was replaced by "PLScene::SNMCameraZoomController"
- Change: "PLPhysics::SNMPhysicsCharacterController" is now using a virtual input controller instead of accessing input devices directly
- Change: New "PLScene::SNMLookController" scene node modifier as replacement for "PLScene::SNMMouseLookController"
- Removed: Old shader interface within PLRenderer
- Bugfix: Within some GLSL shaders, the not specified "clamp(float, int, int)" was used, which didn't work on every system
- Bugfix: Fixed PLDemoRendererRTT graphics bug
- Bugfix (Windows): The precompiled PLDemoNetworkChat binary within the SDK is now a correct console application


Changes in PixelLight 0.9.2-R2 (released on August 27, 2010)
- Bugfix (Windows): Wrong dependency to debug version of MSVC runtime fixed (libfreetype)


Changes in PixelLight 0.9.2-R1 (released on August 23, 2010 - first public PixelLight release)
- Feature: The PLGui project was replaced by it's third complete refactoring
- Feature: Added XML versions of the PixelLight chunk and the PixelLight mesh file format
- Feature: Linux port improvements, PixelLight now runs as a whole under Linux as well
- Feature: OpenGL ES 2.0 renderer backend for mobile devices
- Feature: Initial support for the mobile platform Maemo (used for example by Nokia N900)
- Feature: PLInput now also supports device output controls such as rumble and force-feedback effects as well as control over device LEDs
- Feature: PLInput now also supports virtual devices for device control mapping
- Change: Application framework refactoring
- Change: PLInput refactoring
- Change: Renamed PLEngine project into PLScene
- Change: Added new PLEngine project
- Change: Merged PLCompositingFixedFunctions and PLCompositingShaders into one common PLCompositing project
- Bugfix: Various bugfixes within PLSound and it's backend implementations like PLSoundOpenAL