@@ -68,6 +68,7 @@ add_sources(
 	src/Scene/SceneNodeModifiers/SNMLookController.cpp
 	src/Scene/SceneNodeModifiers/LookController.cpp
 	src/Scene/SceneNodeModifiers/SNMMoveController.cpp
+	src/Scene/SceneNodeModifiers/MoveController.cpp
 	src/Scene/SceneNodeModifiers/SNMAnchor.cpp
 	src/Scene/SceneNodeModifiers/SNMTransform.cpp
 	src/Scene/SceneNodeModifiers/SNMPositionPath.cpp
