@@ -1,5 +1,5 @@
 /*********************************************************\
- *  File: PhysicsCharacterController.cpp                 *
+ *  File: MoveController.cpp                             *
  *
  *  Copyright (C) 2002-2010 The PixelLight Team (http://www.pixellight.org/)
  *
@@ -23,20 +23,20 @@
 //[-------------------------------------------------------]
 //[ Includes                                              ]
 //[-------------------------------------------------------]
-#include "PLPhysics/SceneNodeModifiers/PhysicsCharacterController.h"
+#include "PLScene/Scene/SceneNodeModifiers/MoveController.h"
 
 
 //[-------------------------------------------------------]
 //[ Namespace                                             ]
 //[-------------------------------------------------------]
 using namespace PLInput;
-namespace PLPhysics {
+namespace PLScene {
 
 
 //[-------------------------------------------------------]
 //[ RTTI interface                                        ]
 //[-------------------------------------------------------]
-pl_implement_class(PhysicsCharacterController)
+pl_implement_class(MoveController)
 
 
 //[-------------------------------------------------------]
@@ -46,22 +46,18 @@ pl_implement_class(PhysicsCharacterController)
 *  @brief
 *    Constructor
 */
-PhysicsCharacterController::PhysicsCharacterController() : Controller(ControllerVirtual, "PhysicsCharacterController", "Physics character input controller"),
+MoveController::MoveController() : Controller(ControllerVirtual, "MoveController", "Move input controller"),
 	TransX		(this, "TransX",		"X translation axis: Strafe left/right (+/-)"),
 	TransY		(this, "TransY",		"Y translation axis: Move up/down (+/-)"),
 	TransZ		(this, "TransZ",		"Z translation axis: Move forwards/backwards (+/-)"),
-	RotY		(this, "RotY",			"Y rotation axis: Yaw (also called 'heading') change is turning to the left or right"),
 	Forward		(this, "Forward",		"Move forwards",			0x00),
 	Backward	(this, "Backward",		"Move backwards",			0x00),
-	Left		(this, "Left",			"Move (rotate) left",		0x00),
-	Right		(this, "Right",			"Move (rotate) right",		0x00),
 	StrafeLeft	(this, "StrafeLeft",	"Strafe left",				0x00),
 	StrafeRight	(this, "StrafeRight",	"Strafe right",				0x00),
 	Up			(this, "Up",			"Move up",					0x00),
 	Down		(this, "Down",			"Move down",				0x00),
 	Run			(this, "Run",			"Keep pressed to run",		0x00),
-	Crouch		(this, "Crouch",		"Keep pressed to crouch",	0x00),
-	Jump		(this, "Jump",			"Jump",						0x00)
+	Crouch		(this, "Crouch",		"Keep pressed to crouch",	0x00)
 {
 }
 
@@ -69,7 +65,7 @@ PhysicsCharacterController::PhysicsCharacterController() : Controller(Controller
 *  @brief
 *    Destructor
 */
-PhysicsCharacterController::~PhysicsCharacterController()
+MoveController::~MoveController()
 {
 }
 
@@ -77,4 +73,4 @@ PhysicsCharacterController::~PhysicsCharacterController()
 //[-------------------------------------------------------]
 //[ Namespace                                             ]
 //[-------------------------------------------------------]
-} // PLPhysics
+} // PLScene
