@@ -5,8 +5,10 @@ Changes in PixelLight 0.9.2-R3 (not yet released)
 - Change: Introduced new "PLRenderer::ShaderLanguage" interface, removed "Create<Type>Shader()" and "CreateProgram()" within "PLRenderer::Renderer"
 - Change: Camera zoom input control modifier "PLScene::SNMCameraZoom" was replaced by "PLScene::SNMCameraZoomController"
 - Change: "PLPhysics::SNMPhysicsCharacterController" is now using a virtual input controller instead of accessing input devices directly
+- Change: "PLScene::SNMMoveController" is now using a virtual input controller instead of accessing input devices directly
 - Change: New "PLScene::SNMLookController" scene node modifier as replacement for "PLScene::SNMMouseLookController"
 - Removed: Old shader interface within PLRenderer
+- Removed: "PLScene::SNMMouseMoveController", use "PLScene::SNMMoveController" with virtual input controller instead
 - Bugfix: Within some GLSL shaders, the not specified "clamp(float, int, int)" was used, which didn't work on every system
 - Bugfix: Fixed PLDemoRendererRTT graphics bug
 - Bugfix (Windows): The precompiled PLDemoNetworkChat binary within the SDK is now a correct console application
